--- a/index.html
+++ b/index.html
@@ -1,40 +1,229 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
+    <meta name="color-scheme" content="dark light">
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <script src="./scripts/script.js"></script>
   </head>
-  <body class="page">
+  <body class="body">
     <header class="header decorated-zone">
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
-            >
-              День
+            <button class="header__theme-menu-button interactive header__theme-menu-button_type_light">
+              день
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-              disabled
-            >
-              Авто
+            <button class="header__theme-menu-button interactive header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
+              авто
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
-            >
-              Неон
+            <button class="header__theme-menu-button interactive header__theme-menu-button_type_dark">
+              неон
             </button>
           </li>
         </ul>
       </nav>
+      <span class="header__rec" aria-hidden="true">REC</span>
+      <h1 class="header__title bold">no focus</h1>
+      <p class="header__title-accent text-accent bold">
+        Что делать, когда не можешь делать ничего <br>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+    <main class="main">
+      <section class="section first">
+        <p class="section-title margin bold">
+          Почему сосредоточиться так сложно
+        </p>
+        <p class="section-title text-accent bold">
+          Многозадачность
+        </p>
+        <p class="section-text margin">
+          Особенно сложно сосредоточиться, когда задач много и все они
+          — важные. Где же легендарная многозадачность, когда она так
+          нужна вам (и всем нанимающим менеджерам этого мира)? А дело
+          в том, что её просто не существует. Исследователи <a tabindex="0" class="link interactive">выяснили</a>, что
+          мозгу тяжело концентрироваться даже на двух делах
+          одновременно. А когда в поле внимания попадает несколько
+          важных задач, организм паникует и выделяет кортизол и
+          адреналин — «гормоны стресса». Из-за этого мы работаем
+          невнимательно: ошибаемся и быстро устаём.
+        </p>
+        <p class="section-title text-accent bold">
+          Дофамин
+        </p>
+        <p class="section-text">
+          С гормонами стресса всё понятно, но дальше — ещё интереснее.
+          В нашей невозможности сосредоточиться замешана и полная
+          противоположность стрессу — дофамин. Это вещество участвует
+          в системе вознаграждения мозга. Причём тут он? Мы часто
+          отвлекаемся от важной задачи на что-то более «приятное» для
+          мозгов. Например, смотрим лайки в соцсетях. В это время и
+          выделяется дофамин — и мы чувствуем удовольствие. Получается
+          замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+          получаешь.
+        </p>
+      </section>
+      <section class="section second">
+        <p class="section-title margin bold">
+          Что снижает концентрацию
+          внимания?
+        </p>
+        <p class="section-title text-accent bold">
+          Многозадачность
+        </p>
+        <p class="section-text margin">
+          Как концентрация может
+          снижаться из-за…
+          концентрации? Любая
+          стрессовая ситуация (и резко
+          меняющийся мир в целом)
+          заставляет наш мозг постоянно
+          «сканировать» окружающую
+          среду на предмет опасности.
+          Например, читать новости
+          вместо работы. Но быть
+          собранными всё время —
+          невозможно. Концентрация —
+          мышца, и она может не
+          выдержать, если не давать ей
+          отдохнуть.
+        </p>
+        <p class="section-title text-accent bold">
+          Еда
+        </p>
+        <p class="section-text margin">
+          «Быстрые углеводы» — сахар,
+          белый хлеб, сладости —
+          молниеносно доставляют в мозг
+          энергию и помогают ему лучше
+          работать. Но уходит эта
+          энергия также быстро, как и
+          приходит. А мы в результате
+          попадаем на «углеводные
+          качели»: как только действие
+          «быстрых углеводов»
+          заканчивается, мы чувствуем
+          усталость и сонливость. И
+          хотим ещё больше быстрых
+          углеводов.</p>
+        <p class="section-title text-accent bold">
+          Гаджеты
+        </p>
+        <p class="section-text">
+          Да-да, это та самая ситуация,
+          когда на экране ноутбука —
+          код, в наушниках — подкаст, а
+          на компьютере фоном — ещё и
+          видео с забавными утятами. В
+          результате мозг пытается
+          переключиться с одной задачи
+          на другую — и просто не
+          может. А чтобы вернуться к
+          состоянию полной
+          концентрации, человеку в
+          среднем нужно 20 минут. Вот и
+          получается, что чем больше
+          времени мы проводим в
+          гаджетах, тем больше времени
+          затем нужно, чтобы вернуться
+          к работе.
+        </p>
+      </section>
+      <section class="section third">
+        <p class="section-title margin bold">
+          Как концентрироваться лучше,
+          чем золотая рыбка (то есть
+          дольше трёх секунд)
+        </p>
+        <p class="section-title margin text-accent bold">
+          5 простых (на самом деле не очень) советов
+        </p>
+        <p class="section-title text-accent">
+          Представьте небо и облака
+        </p>
+        <p class="section-text margin">
+          Или листья в ручье. Тут дело в лёгкой медитации, которая
+          помогает успокоиться. Ведь часто именно тревожные мысли о
+          сложных задачах как раз и мешают эти сложные задачи делать.
+          В такие моменты можно закрыть глаза и представить, что
+          чистое небо — это вы, а облака — тревожные мысли. И сколько
+          бы их ни было — ясное небо всегда будет где-то там, за
+          тучами, и никуда не денется. Это упражнение поможет
+          вернуться в настоящий момент, а не волноваться о
+          потенциальных проблемах из будущего.
+        </p>
+        <p class="section-title text-accent">
+          Включите музыку
+        </p>
+        <p class="section-text margin">
+          Но не любую, и не любимую. Любимая может быть связана с
+          сильными положительными эмоциями, которые тоже очень сильно
+          отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
+          Можно вообще попробовать включить плейлист с «белым шумом»
+          или нейромузыкой.
+        </p>
+        <p class="section-title text-accent">
+          Прогуляйтесь
+        </p>
+        <p class="section-text margin">
+          Или даже пробегитесь. Лучше найти парк или лес: один
+          эксперимент <a tabindex="0" class="link interactive">показал</a>, что созерцание природы повышает
+          концентрацию, в то время как после просмотра городских
+          пейзажей она наоборот понижается. Можно совместить прогулку
+          с физическими упражнениями или бегом — так в мозг поступит
+          ещё больше кислорода и он будет лучше работать. Но и простая
+          двадцатиминутная прогулка — тоже отличный вариант.
+        </p>
+        <p class="section-title text-accent">
+          Хорошо ешьте
+        </p>
+        <p class="section-text margin">
+          Мы — не ваша бабушка, но это правда важно. Выбирайте
+          продукты, которые препятствуют резким скачкам сахара в
+          крови. Например, с высоким содержанием клетчатки: овощи,
+          ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб
+          из цельнозерновой пшеницы.
+        </p>
+        <p class="section-title text-accent">
+          Читайте
+        </p>
+        <p class="section-text">
+          Настоящие бумажные книги. Это правда помогает с
+          концентрацией: чтобы прочитать пост в соцсети, достаточно
+          нескольких минут или даже секунд. А вот интересная книга
+          способна затянуть и на несколько часов и круто тренирует
+          направленное внимание.
+        </p>
+      </section>
+      <section class="section images">
+        <p class="section-title text-accent bold">
+          А можно в картинках?
+        </p>
+        <img class="image" src="./images/sunset.png" alt="" loading="lazy">
+        <img class="image" src="./images/ice-cream.png" alt="" loading="lazy">
+        <img class="image" src="./images/street.png" alt="" loading="lazy">
+        <img class="image" src="./images/tape.png" alt="" loading="lazy">
+        <img class="image" src="./images/books.png" alt="" loading="lazy">
+      </section>
+    </main>
+    <footer class="footer">
+    <p class="footer__title bold">focus</p>
+    </footer>
   </body>
 </html>
